[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/vapor_falcon.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/camera_base.gd" type="Script" id=3]
[ext_resource path="res://scenes/starlight.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/space.gd" type="Script" id=5]
[ext_resource path="res://audio/ElectricPuppet.wav" type="AudioStream" id=6]
[ext_resource path="res://scripts/BackgroundMusicStreamer.gd" type="Script" id=7]
[ext_resource path="res://default_theme.tres" type="Theme" id=9]
[ext_resource path="res://scripts/UserInterface.gd" type="Script" id=10]
[ext_resource path="res://scenes/spawner/spawner1-1.tscn" type="PackedScene" id=11]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 0, 0, 0, 0 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1 )

[node name="space" type="Spatial"]
script = ExtResource( 5 )
spawner_list_level1 = [ ExtResource( 11 ) ]

[node name="BackgroundMusicStreamer" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.91262, -1.14649 )
stream = ExtResource( 6 )
pitch_scale = 0.02
script = ExtResource( 7 )

[node name="UserInterface" type="Control" parent="."]
visible = false
margin_right = 190.0
margin_bottom = 320.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelCleared" type="Label" parent="UserInterface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.5
margin_top = -85.0
margin_right = 50.5
margin_bottom = -62.0
theme = ExtResource( 9 )
text = "Level 1 cleared!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="UserInterface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.5
margin_top = -27.0
margin_right = 71.5
margin_bottom = 27.0
theme = ExtResource( 9 )
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kills" type="Label" parent="UserInterface/GridContainer"]
margin_right = 65.0
margin_bottom = 23.0
text = "Kill Count:"

[node name="empty" type="Label" parent="UserInterface/GridContainer"]
margin_left = 73.0
margin_right = 107.0
margin_bottom = 23.0
text = "      "

[node name="KillNum" type="Label" parent="UserInterface/GridContainer"]
margin_left = 115.0
margin_right = 143.0
margin_bottom = 23.0
text = "5"

[node name="Points" type="Label" parent="UserInterface/GridContainer"]
margin_top = 31.0
margin_right = 65.0
margin_bottom = 54.0
text = "Points:"

[node name="empty2" type="Label" parent="UserInterface/GridContainer"]
margin_left = 73.0
margin_top = 31.0
margin_right = 107.0
margin_bottom = 54.0

[node name="PointNum" type="Label" parent="UserInterface/GridContainer"]
margin_left = 115.0
margin_top = 31.0
margin_right = 143.0
margin_bottom = 54.0
text = "90"

[node name="ContinueButton" type="Button" parent="UserInterface"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -34.0
margin_top = -60.0
margin_right = 34.0
margin_bottom = -37.0
rect_min_size = Vector2( 50, 20 )
rect_clip_content = true
theme = ExtResource( 9 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" parent="." instance=ExtResource( 1 )]

[node name="flying_layer" type="MeshInstance" parent="."]
transform = Transform( 1.6183, 0, 0, 0, 1, 0, 0, 0, 3.18037, -0.00156482, 0.25, -2.99955 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="flying_layer"]

[node name="CollisionShape" type="CollisionShape" parent="flying_layer/StaticBody"]
shape = SubResource( 3 )

[node name="starlight" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7 )
speed = 6

[node name="camera_base" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0.2, -2 )
script = ExtResource( 3 )

[node name="camera" type="Camera" parent="camera_base"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )

[node name="vapor_falcon" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.25, -1.15 )

[connection signal="spawner_defeated" from="." to="UserInterface" method="_on_space_spawner_defeated"]
[connection signal="spawner_defeated" from="." to="camera_base" method="_on_space_spawner_defeated"]
[connection signal="pressed" from="UserInterface/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="UserInterface/ContinueButton" to="UserInterface" method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="UserInterface/ContinueButton" to="camera_base" method="_on_ContinueButton_pressed"]
[connection signal="was_defeated" from="vapor_falcon" to="." method="_on_vapor_falcon_was_defeated"]
[connection signal="was_defeated" from="vapor_falcon" to="background" method="_on_vapor_falcon_was_defeated"]
[connection signal="was_defeated" from="vapor_falcon" to="camera_base" method="_on_vapor_falcon_was_defeated"]

[editable path="starlight"]
